# Pikaia

./: .gitignore  GETTING_STARTED.md  MAP.md  Orchestrator.py  README.md  anthropic.py  generate_arch.py  pyproject.toml  requirements.txt  review.md
.github/workflows/: ci.yml
Pikaia/: MAP.md  Orchestrator.py  agent.py  config.json  context_manager.py  db.py  init.py  keys.json  main.py  metrics.py  models.json  mt_palace.py  test_tools.py  trajectory.py
Pikaia/skills/: skills.json
Pikaia/skills/templates/: web_search.md
Pikaia/tools/: error_types.py  registry.py  schemas.py  tools.json
Pikaia/tools/impl/: apply_patch.py  cli_output.py  code_exec.py  context_fetch.py  ct_close.py  edit.py  embed_text.py  file_delete.py  file_move.py  file_read.py  file_write.py  glob.py  grep.py  http_request.py  list_dir.py  llm_call.py  memory_read.py  memory_write.py  question.py  send_message.py  shell_exec.py  skill_read.py  skill_write.py  todo_write.py  web_fetch.py  web_search.py
Pikaia/tools/providers/: anthropic.py  base.py  debug.py  deepseek_local.py  groq.py  ollama.py  openai.py
examples/: deepseek_local.py
tests/: __init__.py  conftest.py  test_error_types.py  test_memory_write.py  test_shell_exec.py
